@@ -1,3 +1,15 @@
+2011-02-28  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r79948.
+        http://trac.webkit.org/changeset/79948
+        https://bugs.webkit.org/show_bug.cgi?id=55439
+
+        "caused crashes on the SL release bot" (Requested by ggaren on
+        #webkit).
+
+        * runtime/JSGlobalData.h:
+        * runtime/WriteBarrier.h:
+
 2011-02-28  Gavin Barraclough  <barraclough@apple.com>
 
         Windows build fix.
